# -DoctorCanc-nAgentNanoBot

./: CLAUDE.md  LICENSE  package.json
.claude/: settings.local.json
.codersinflow/: index.json
DoctorCancunAgentNanoBot/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
DoctorCancunAgentNanoBot/.github/workflows/: deploy.yml  test.yml
DoctorCancunAgentNanoBot/app/: main.py
DoctorCancunAgentNanoBot/app/channels/: telegram.py  web_widget.py  whatsapp.py
DoctorCancunAgentNanoBot/app/cloud/: dashboard.py
DoctorCancunAgentNanoBot/app/config/: settings.py
DoctorCancunAgentNanoBot/app/core/: agent_loop.py  intent_router.py  state_machine.py
DoctorCancunAgentNanoBot/app/services/: price_engine.py
DoctorCancunAgentNanoBot/app/utils/: i18n.py  text_normalize.py
DoctorCancunAgentNanoBot/data/: responses.yaml
DoctorCancunAgentNanoBot/tests/: test_intents.py
DoctorCancunAgentNanoBot/workspace/: AGENTS.md  MEMORY.md
app/: main.py
app/channels/: telegram.py
app/cloud/: backup.py  mcp_server.py
app/config/: llm_config.yaml
app/core/: context.py  onboarding.py
app/services/: lead_manager.py  llm_router.py
app/utils/: logger.py
data/: business_rules.yaml  intents.yaml  onboarding_log.yaml
docs/: COMPETITIVE_INTEL.md  CUESTIONARIO.md  RESEARCH.md
infrastructure/: Dockerfile  docker-compose.yml  render.yaml
scripts/: deploy.sh  setup.sh
tests/: test_onboarding.py  test_price_engine.py  test_state_machine.py
web/templates/: dashboard.html  landing.html
workspace/: SOUL.md  USER.md
(+2 files in other folders)
